# indent

./: CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  pyproject.toml  python_indentation_checker.py  settings.gradle.kts
indentation_checker/: __init__.py  __main__.py
lstest/: __init__.py
src/main/kotlin/com/example/indentationchecker/: IndentationColorAnnotator.kt  IndentationInspection.kt
